# xuanshu

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/idea/: 玄枢_v1_概念方案.md
docs/operations/: alerts.md  backup-and-restore.md  logging.md  runbook.md  single-host-deploy.md
docs/superpowers/plans/: 2026-04-18-xuanshu-cross-service-integration-plan.md  (+11 more)
ops/: daily_health_report.py
src/xuanshu/: __init__.py
tests/: conftest.py  test_project_smoke.py
tests/apps/: test_governor_app_wiring.py  test_momentum_backtest_app.py  test_notifier_app_wiring.py  test_service_wiring.py  test_trader_app_wiring.py  test_vol_breakout_backtest_app.py  test_vote_trend_backtest_app.py
tests/contracts/: test_contracts.py  test_event_contracts.py  test_strategy_definition.py
tests/dashboard/: test_dashboard_service.py
tests/execution/: test_execution_and_recovery.py  test_execution_coordinator.py  test_okx_execution_engine.py
tests/governor/: test_backtest.py  test_governor_service.py  test_research.py
tests/momentum/: test_momentum_backtest.py  test_okx_history.py
tests/notifier/: test_notifier_service.py
tests/ops/: test_preflight.py  test_runtime_logging.py
tests/risk/: test_risk_kernel.py
tests/sizing/: test_position_sizer.py
tests/storage/: test_storage_boundaries.py
tests/strategies/: test_dsl_rules.py
tests/trader/: test_dispatcher.py  test_recovery.py  test_trader_decision_flow.py
tests/vol_breakout/: test_vol_breakout_backtest.py
tests/vote_trend/: test_vote_trend_backtest.py
(+75 files in other folders)
